GetPoducts, Search Products and AddProduct handlers added Swagger API Doc.
